--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>thabares (Thabares Nazeer Basha)</title>
     <style>
       body {
+        background-color: #0d1117;
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Noto Sans',
           Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
       }
