index meta tag updated.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,41 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Welcome to the portfolio of Thabares Nazeer Basha, a React JS Developer experience in creating dynamic and responsive web applications."
+    />
+    <meta
+      name="keywords"
+      content="Thabares Nazeer, portfolio, React JS Developer, web development, JavaScript, MERN stack, HTML, CSS"
+    />
+    <meta name="author" content="Thabares Nazeer Basha" />
+
+    <!-- Open Graph Tags -->
+    <meta property="og:title" content="Thabares Nazeer Basha's Portfolio" />
+    <meta
+      property="og:description"
+      content="Explore the portfolio of Thabares Nazeer Basha, showcasing expertise in React JS and web development."
+    />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/itstab24/image/upload/v1729957319/users/spftfalrx0qhnhtwhtro.png"
+    />
+    <meta property="og:url" content="https://thabares-nazeer.web.app/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Thabares Nazeer Basha's Portfolio" />
+    <meta
+      name="twitter:description"
+      content="Explore the portfolio of Thabares Nazeer Basha, showcasing expertise in React JS and web development."
+    />
+    <meta
+      name="twitter:image"
+      content="https://res.cloudinary.com/itstab24/image/upload/v1729957319/users/spftfalrx0qhnhtwhtro.png"
+    />
+
     <title>thabares (Thabares Nazeer Basha)</title>
     <style>
       body {
